[package]
name = "sdl2_image"
version = "0.18.0"
authors = ["xsleonard"]
description = "SDL2_image bindings and wrappers"
license = "MIT"
repository = "https://github.com/xsleonard/rust-sdl2_image"
keywords = ["SDL2"]
build = "build.rs"

[lib]
name = "sdl2_image"
path = "src/sdl2_image/lib.rs"

[dependencies]
bitflags = "^0.5"
#sdl2 = "0.18.0"
#sdl2-sys = "0.8.1"
sdl2 = { path = "../rust-sdl2" }
sdl2-sys = { path = "../rust-sdl2/sdl2-sys" }

[[bin]]
name = "demo"
path = "src/demo/main.rs"
